yaml for istio and k8/yaml of emoji-grpc-practice 01(uncorrect)/gateway.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: gateway
  namespace: istio-system 
spec:
  selector:
    istio: ingressgateway
  servers:
  - port:
      number: 8080
      name: grpc
      protocol: GRPC
    hosts:
    - "*"
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: vs
spec:
  hosts:
  - "*"
  gateways:
  - gateway.istio-syustem.svc.cluster.local
  http:
  - match:
    - port: 8080
    route:
    - destination:
        host: backend
        port:
          number: 9000
